Updated dependency, fixed a few issues, added !osulastplays.